# video-processing

./: .coverage  .dockerignore  Dockerfile  README.md  celery-entrypoint.sh  docker-compose.yml  entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 21d6ca6be17f_video_models.py  66689b718c8c_add_generate_ulid.py  c5a6323a4b35_enable_pgcrypto.py
app/: main.py
app/core/: constants.py  database.py  settings.py
app/enums/: app_env.py  video_process_status.py
app/models/: __init__.py  sqlalchemy_base_model.py  video_frame_model.py  video_model.py
app/routes/: __init__.py
app/routes/video/: __init__.py
app/schemas/config/: __init__.py  app_config.py  celery_config.py  database_config.py
app/schemas/request/body/: enqueue_body.py
app/schemas/response/: video_response.py
app/services/: video_service.py
app/tasks/: video_tasks.py
tests/: test_e2e.py
